try stop overflow only on laptop

--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -744,10 +744,10 @@ h5.artSectionTitle {
   margin-top: 2%;
   margin-left: 1%;
 }
-
+/* 
 body.bArt {
   overflow: hidden;
-}
+} */
 
 article.artBookDescription {
   display: block;
@@ -865,16 +865,14 @@ img.wireframeImg {
   .mobileView {
     display: none;
   }
+
+  body.bArt {
+    overflow: hidden;
+  }
 }
 
 @media only screen and (max-device-width: 1024px) {
   .artContentHide {
-    display: none;
-  }
-}
-
-@media only screen and (min-device-width: 600px) {
-  .mobileView {
     display: none;
   }
 }
